<resources>
    <string name="app_name">AndroidTaskManager</string>
    <string name="main">Главная</string>
    <string name="today_tasks">Все задачи</string>
    <string name="About_us">Про нас</string>
    <string name="Name">Имя выполнителя</string>
    <string name="priority">Приоритет</string>
    <string name="task_description">Описание задачи</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_todo_hint">Task title</string>
    <string name="enter_todo_hint_description">Task description</string>
    <string name="today_calendar_button">Today</string>
    <string name="empty_field">Empty task</string>
    <string name="due_date_text">Due Date</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="this_wknd">This Weekend</string>
    <string name="next_week">Next Week</string>
    <string name="radio_high">High</string>
    <string name="radio_med">Medium</string>
    <string name="radio_low">Low</string>
    <string name="image_description">button image</string>
    <string name="about_text">Todoist Clone App - by BAWP - version 0.1</string>
    <string name="add_todos">Add a Todo...</string>

</resources>